--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
     <script defer src="script.js"></script>
+    <div class="header">
+        <h1>Header</h1>
+        <p>My supercool header</p>
+    </div>
     <title>Aristocat Quiz</title>
 </head>
 <body>
@@ -14,9 +18,9 @@
         <div id="question">Question</div>
         <div id="answer-buttons" class="btn-grid">
             <button class="btn correct">Answer 1</button>
-            <button class="btn wrong">Answer 1</button>
-            <button class="btn">Answer 1</button>
-            <button class="btn">Answer 1</button>
+            <button class="btn wrong">Answer 2</button>
+            <button class="btn">Answer 3</button>
+            <button class="btn">Answer 4</button>
         </div>
     </div>
     <div class="controls">
