--- a/index.html
+++ b/index.html
@@ -6,27 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
     <script defer src="script.js"></script>
-    <div class="header">
-        <h1>Header</h1>
-        <p>My supercool header</p>
-    </div>
     <title>Aristocat Quiz</title>
 </head>
 <body>
-   <div class="container">
-    <div id="question-container" class="hide">
-        <div id="question">Question</div>
-        <div id="answer-buttons" class="btn-grid">
-            <button class="btn correct">Answer 1</button>
-            <button class="btn wrong">Answer 2</button>
-            <button class="btn">Answer 3</button>
-            <button class="btn">Answer 4</button>
+    <div class="header">
+        <h1>Aristocat Quiz</h1>
+        <h1>Which Cat Are You?</h1>
+        <div id = img-box>
+            <img id = "cat-image"><br>
         </div>
+        <div class="container-fluid">
+            <div id="question-container" class="hide">
+                <div id="question">Question</div>
+                <div id="answer-buttons" class="btn-grid">
+                    <button class="btn correct">Answer 1</button>
+                    <button class="btn wrong">Answer 2</button>
+                    <button class="btn">Answer 3</button>
+                    <button class="btn">Answer 4</button>
+                </div>
+            </div>
+            <div class="controls">
+                <button id="start-btn" class="start-btn btn">Start</button>
+                <button id="next-btn" class="next-btn btn hide">Next</button>
+            </div>
+           </div> 
     </div>
-    <div class="controls">
-        <button id="start-btn" class="start-btn btn">Start</button>
-        <button id="next-btn" class="next-btn btn hide">Next</button>
-    </div>
-   </div> 
+   
 </body>
 </html>
