added the scoring as well as the results and photos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
         <h1>Aristocat Quiz</h1>
-        <h1>Which Cat Are You?</h1>
+        <h2 id="messaging">Which Cat Are You?</h2>
         <div id = img-box>
             <img id = "cat-image"><br>
         </div>
