changed the font sizes and colors to make things stand out more

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="header">
-        <h1>Aristocat Quiz</h1>
-        <h2 id="messaging">Which Cat Are You?</h2>
+        <h1 style="font-size:300%;">Aristocat Quiz</h1>
+        <h2 style="color:green;"id="messaging">Which Cat Are You?</h2>
         <div id = img-box>
             <img id = "cat-image"><br>
         </div>
