--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
         <h1 style="font-size:300%;">Aristocat Quiz</h1>
-        <h2 style="color:green;"id="messaging">Which Cat Are You?</h2>
+        <h2 style="color:purple;"id="messaging">Which Cat Are You?</h2>
         <div id = img-box>
             <img id = "cat-image"><br>
         </div>
