simplified, removed duplicated functions

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="controls">
-                <button id="start-btn"onkeypress="return searchKeyPress(event);" class="start-btn btn">Start</button>
+                <button id="start-btn"class="start-btn btn">Start</button>
                 <button id="next-btn" class="next-btn btn hide">Next</button>
             </div>
            </div> 
