formatting changes to CSS

--- a/index.html
+++ b/index.html
@@ -12,25 +12,23 @@
     <div class="header">
         <h1 style="font-size:300%;">Aristocat Quiz</h1>
         <h2 style="color:purple;"id="messaging">Which Cat Are You?</h2>
-        <div id = img-box>
+     </div>
+    <div class="container-fluid">
+                <div id = img-box>
             <img id = "cat-image"><br>
         </div>
-        <div class="container-fluid">
-            <div id="question-container" class="hide">
-                <div id="question">Question</div>
-                <div id="answer-buttons" class="btn-grid">
-                    <button class="btn correct">Answer 1</button>
-                    <button class="btn wrong">Answer 2</button>
-                    <button class="btn">Answer 3</button>
-                    <button class="btn">Answer 4</button>
-                </div>
+        <div id="question-container" class="hide">
+            <div id="question">Question</div>
+            <div id="answer-buttons" class="btn-grid">
+                <button id="correct"class="btn correct">Answer 1</button>
+                <button id="wrong"class="btn wrong">Answer 2</button>
             </div>
-            <div class="controls">
-                <button id="start-btn"class="start-btn btn">Start</button>
-                <button id="next-btn" class="next-btn btn hide">Next</button>
-            </div>
-           </div> 
-    </div>
+        </div>
+        <div class="controls">
+            <button id="start-btn"class="start-btn btn">Start</button>
+            <button id="next-btn" class="next-btn btn hide">Next</button>
+        </div>
+       </div> 
    
 </body>
 </html>
